Created user sign up route
